--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HealthTech - Seu Parceiro Médico de Confiança</title>
+    <title>ClimedRN - Seu Parceiro Médico de Confiança</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <style>
@@ -59,12 +59,12 @@
         }
     </style>
 </head>
-<body>
+<body class="min-h-screen flex flex-col">
     <div class="floating-icons" id="floatingIcons"></div>
 
     <nav class="bg-blue-600 text-white p-4">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold">HealthTech</a>
+            <a href="index.html" class="text-2xl font-bold">ClimedRN</a>
             <ul class="flex space-x-4">
                 <li><a href="index.html" class="hover:text-blue-200">Início</a></li>
                 <li><a href="medicos.html" class="hover:text-blue-200">Médicos</a></li>
@@ -78,47 +78,31 @@
         </div>
     </nav>
 
-    <header class="container mx-auto mt-10 text-center">
-        <h1 class="text-4xl font-bold mb-4">Bem-vindo ao HealthTech</h1>
-        <p class="text-xl mb-8">Seu parceiro de confiança em saúde e bem-estar</p>
-    </header>
+    <div class="flex-grow">
+        <header class="container mx-auto mt-10 text-center">
+            <h1 class="text-4xl font-bold mb-4">Bem-vindo ao ClimedRN</h1>
+            <p class="text-xl mb-8">Seu parceiro de confiança em saúde e bem-estar</p>
+        </header>
 
-    <main class="container mx-auto mt-10">
-        <section class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-16">
-            <div class="neumorphic p-8">
-                <h2 class="text-2xl font-bold mb-4">Agende uma Consulta</h2>
-                <p class="mb-4">Marque sua visita com nossos médicos especialistas de forma rápida e fácil.</p>
-                <a href="agendamentos.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Agendar Agora</a>
-            </div>
-            <div class="neumorphic p-8">
-                <h2 class="text-2xl font-bold mb-4">Acesse seu Prontuário</h2>
-                <p class="mb-4">Visualize e gerencie seu histórico médico de forma segura online.</p>
-                <a href="prontuarios.html" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">Ver Prontuário</a>
-            </div>
-        </section>
-
-        <section class="mb-16">
-            <h2 class="text-3xl font-bold mb-8 text-center">Nossos Serviços</h2>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                <div class="neumorphic p-6">
-                    <h3 class="text-xl font-bold mb-2">Clínica Geral</h3>
-                    <p>Atendimento abrangente para uma ampla gama de problemas de saúde.</p>
+        <main class="container mx-auto mt-10">
+            <section class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-16">
+                <div class="neumorphic p-8">
+                    <h2 class="text-2xl font-bold mb-4">Agende uma Consulta</h2>
+                    <p class="mb-4">Marque sua visita com nossos médicos especialistas de forma rápida e fácil.</p>
+                    <a href="agendamentos.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Agendar Agora</a>
                 </div>
-                <div class="neumorphic p-6">
-                    <h3 class="text-xl font-bold mb-2">Pediatria</h3>
-                    <p>Cuidados especializados para bebês, crianças e adolescentes.</p>
+                <div class="neumorphic p-8">
+                    <h2 class="text-2xl font-bold mb-4">Acesse seu Prontuário</h2>
+                    <p class="mb-4">Visualize e gerencie seu histórico médico de forma segura online.</p>
+                    <a href="prontuarios.html" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">Ver Prontuário</a>
                 </div>
-                <div class="neumorphic p-6">
-                    <h3 class="text-xl font-bold mb-2">Cardiologia</h3>
-                    <p>Atendimento especializado para condições cardíacas e cardiovasculares.</p>
-                </div>
-            </div>
-        </section>
-    </main>
+            </section>
+        </main>
+    </div>
 
     <footer class="bg-blue-600 text-white py-8 mt-16">
         <div class="container mx-auto text-center">
-            <p>&copy; 2024 HealthTech. Todos os direitos reservados.</p>
+            <p>&copy; 2023 ClimedRN. Todos os direitos reservados.</p>
         </div>
     </footer>
 
