--- a/prontuarios.html
+++ b/prontuarios.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prontuários - HealthTech</title>
+    <title>Prontuários - ClimedRN</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <style>
@@ -43,7 +43,7 @@
 <body>
     <nav class="bg-blue-600 text-white p-4">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold">HealthTech</a>
+            <a href="index.html" class="text-2xl font-bold">ClimedRN</a>
             <ul class="flex space-x-4">
                 <li><a href="index.html" class="hover:text-blue-200">Início</a></li>
                 <li><a href="medicos.html" class="hover:text-blue-200">Médicos</a></li>
@@ -102,7 +102,7 @@
 
     <footer class="bg-blue-600 text-white py-8 mt-16">
         <div class="container mx-auto text-center">
-            <p>&copy; 2023 HealthTech. Todos os direitos reservados.</p>
+            <p>&copy; 2023 ClimedRN. Todos os direitos reservados.</p>
         </div>
     </footer>
 
